Really fixed the truncating labels issue.

--- a/FrontEnd/styles/matrix.scss
+++ b/FrontEnd/styles/matrix.scss
@@ -45,11 +45,13 @@
 
             span {
                 overflow: hidden;
-                flex-basis: 0;
-                flex-grow: 1;
-                max-width: fit-content;
+                flex-shrink: 0;
                 white-space: nowrap;
                 text-overflow: ellipsis;
+
+                &.longest {
+                    flex-shrink: 1;
+                }
             }
 
             .separator {
